--- a/app/src/main/res/layout/nav_drawer_footer.xml
+++ b/app/src/main/res/layout/nav_drawer_footer.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Footer TextView displaying build and license information -->
+    <!-- Footer TextView displaying build and license information #690sp -->
     <TextView
         android:id="@+id/drawer_footer_text"
         android:layout_width="match_parent"
